cleaned code up

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ FineTunedBERT/Argument/26062217/*
 FineTunedBERT/Sentiment/24060142/*
 FineTunedBERT/Sentiment/30051621/*
 
+SHAPplots
+SHAPplots/*
+
 *.pkl
 
